0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_processing/nmr/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr:

.. _examples-processing-nmr-index:

Processing NMR datasets
-----------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Analysis CP NMR spectra">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_cp_nmr_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_cp_nmr.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Analysis CP NMR spectra</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_nmr_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Processing NMR spectra (slicing, baseline correction, peak picking, peak fitting)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Processing Relaxation measurement">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/thumb/sphx_glr_plot_processing_nmr_relax_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_processing_nmr_relax.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Processing Relaxation measurement</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_processing_cp_nmr
   /gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_processing_nmr
   /gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_processing_nmr_relax

